--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -11,12 +11,18 @@
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.23.3",
     "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.0.3"
+  },
+  "devDependencies": {
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.0.3",
-    "nodemon": "^3.1.11",
-    "supertest": "^6.3.3",
-    "ts-node": "^10.9.2"
-  }
+    "nodemon": "^3.1.11"
+  },
+  "description": ""
 }
