--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4",
     "zod": "^4.3.6"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "https://payment-mern-backend.vercel.app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
